k8s/registry-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
spec:
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2.7.1
        ports:
        - containerPort: 5000
          protocol: TCP
