k8s/registry-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: registry-service
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30000
  type: NodePort
