k8s/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry-service
            port:
              number: 5000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: registry-service
            port:
              number: 5001
